--- a/thank-you.html
+++ b/thank-you.html
@@ -1,127 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Submission Received | Mark Bennett</title>
+  <meta charset="UTF-8">
+  <title>Subscription Confirmed</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+      color: white;
+      text-align: center;
+      padding: 50px 20px;
+    }
 
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    .container {
+      max-width: 600px;
+      margin: auto;
+      background: rgba(255,255,255,0.1);
+      padding: 40px;
+      border-radius: 15px;
+    }
 
-<style>
+    h1 {
+      font-size: 28px;
+      margin-bottom: 20px;
+    }
 
-body{
-margin:0;
-font-family:'Inter',sans-serif;
-background:linear-gradient(-45deg,#0b1120,#0f172a,#020617,#111827);
-background-size:400% 400%;
-animation:gradientShift 15s ease infinite;
-color:#f8fafc;
-display:flex;
-align-items:center;
-justify-content:center;
-min-height:100vh;
-}
+    p {
+      font-size: 18px;
+      margin-bottom: 25px;
+    }
 
-@keyframes gradientShift{
-0%{background-position:0% 50%;}
-50%{background-position:100% 50%;}
-100%{background-position:0% 50%;}
-}
+    .btn {
+      display: inline-block;
+      padding: 12px 25px;
+      background-color: #ff5f6d;
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
+      font-size: 16px;
+    }
 
-.container{
-max-width:750px;
-padding:60px;
-background:rgba(15,23,42,0.96);
-border-radius:22px;
-box-shadow:0 0 70px rgba(0,0,0,0.7);
-text-align:center;
-animation:fadeIn 1.2s ease;
-}
-
-@keyframes fadeIn{
-from{opacity:0;transform:translateY(20px);}
-to{opacity:1;transform:translateY(0);}
-}
-
-h1{
-font-family:'Playfair Display',serif;
-font-size:38px;
-margin-bottom:20px;
-color:#d4af37;
-}
-
-p{
-color:#cbd5e1;
-line-height:1.9;
-font-size:15px;
-margin-bottom:25px;
-}
-
-.badge{
-margin-top:30px;
-padding:12px 20px;
-display:inline-block;
-background:#d4af37;
-color:#0f172a;
-border-radius:30px;
-font-weight:600;
-font-size:14px;
-}
-
-.footer{
-margin-top:50px;
-font-size:13px;
-color:#94a3b8;
-line-height:1.7;
-}
-
-.signature{
-margin-top:25px;
-font-family:'Playfair Display',serif;
-color:#d4af37;
-font-size:20px;
-}
-
-</style>
+    .btn:hover {
+      background-color: #ff2e4d;
+    }
+  </style>
 </head>
-
 <body>
-
-<div class="container">
-
-<h1>✔ Submission Successfully Received</h1>
-
-<p>
-Your psychological alignment profile has been securely submitted.
-</p>
-
-<p>
-Every response is personally reviewed by <strong>Mark Bennett</strong> and our U.S.-based Behavioral Insight Team.
-This process is fully confidential and human-structured.
-</p>
-
-<p>
-You will receive your first personalized guidance message after review.
-Please allow sufficient time for manual analysis and strategic preparation.
-</p>
-
-<div class="badge">
-Private • Selective • Human-Written
-</div>
-
-<div class="footer">
-📍 Headquarters: 1209 Orange Street, Wilmington, Delaware, United States  
-All submissions are reviewed within our secure U.S. environment.  
-No automation. No AI-generated responses.  
-
-<div class="signature">
-Mark Bennett  
-Founder | Psychological Alignment Architect
-</div>
-
-</div>
-
-</div>
-
+  <div class="container">
+    <h1>🎉 Thank You for Subscribing!</h1>
+    <p>Your profile has been successfully submitted.</p>
+    <p>You will start receiving your personalized daily messages soon.</p>
+    <a class="btn" href="https://client-services-portal.vercel.app/">
+      Back to Home
+    </a>
+  </div>
 </body>
 </html>
